style.css
/* ... */
#scrollTop:hover{
    transform:translateY(-5px);
    background:#2563eb;
}
#scrollTop i{
    line-height:1;
}
/*responsive*/

@media (max-width:768px){

    /* Navbar */

    .navbar{
        padding:15px 20px;
    }
    .logo{
        font-size:26px;
        flex-shrink:0;
    }

    .nav-links{
        position:absolute;
        top:75px;
        left:0;
        width:100%;
        background:#111827;
        flex-direction:column;
        align-items:center;
        gap:25px;
        padding:30px 0;
        display:none;
    }

    .nav-links.active{
        display:flex;
    }

    .menu-btn{
        display:block;
        font-size:30px;
        cursor:pointer;
        flex-shrink:0;
    }

    /* Hero */
    html,
    body{
        overflow-x:hidden;
        width:100%;
    }

    .hero{
        flex-direction:column-reverse;
        text-align:center;
        gap:40px;
        padding-top:110px;
    }

    header{
        position:fixed;
        top:0;
        left:0;
        width:100%;
        z-index:9999;
    }

    .navbar{
        width:100%;
        overflow:visible;
    }

    .hero-left h1{
        font-size:42px;
    }

    .hero-left h3{
        font-size:24px;
    }

    .hero-left h4{
        font-size:18px;
    }

    .hero-left p{
        font-size:15px;
    }

    .hero-buttons{
        flex-direction:column;
        align-items:center;
    }

    .btn{
        width:220px;
        text-align:center;
    }

    .social-icons{
        justify-content:center;
    }

    .profile-card{
        width:260px;
        height:260px;
    }

    /* Section */

    .section{
        padding:70px 0;
    }

    .section-title h2{
        font-size:32px;
    }

    /* About */

    .about-container{
        grid-template-columns:1fr;
        text-align:center;
    }

    .about-info{
        grid-template-columns:1fr;
    }

    .about-content h3{
        font-size:28px;
    }

    /* Education */

    .education-content{
        padding:25px;
    }

    .education-content h3{
        font-size:22px;
    }

    /* Timeline */

    .timeline::before{
        left:20px;
    }

    .timeline-item{
        width:100%;
        left:0 !important;
        text-align:left;
        padding-left:60px;
        padding-right:15px;
    }

    /* Skills */

    .skills-grid{
        grid-template-columns:1fr;
    }

    /* Projects */

    .project-grid{
        grid-template-columns:1fr;
    }

    .project-card img{
        height:200px;
    }

    .project-buttons{
        flex-direction:column;
    }

    /* Contact */

    .contact-form{
        width:100%;
    }

    /* Footer */

    .footer-icons{
        flex-wrap:wrap;
    }
    .about-image{
        margin-top:0px;
        display:none;
        padding:0px;

    }
    .section-title {
        margin-bottom: 10px;
    }
   .about-content h3{
        font-size: medium;
    }
.section-title p{
    display:none;
}
    [data-aos="fade-right"]:not(.aos-animate),
    [data-aos="fade-left"]:not(.aos-animate){
        transform: translateY(30px);
    }

}

